Adding Random Text block

--- a/fakewallapp/war/resources/style.css
+++ b/fakewallapp/war/resources/style.css
@@ -136,3 +136,8 @@
 	hieght:100px;
 	
 }
+#gaga{
+	color:#3B5998;
+	font-size:1.1em;
+	font-family:'lucida grande', tahoma, verdana, arial, sans-serif;
+}
