--- a/fakewallapp/war/resources/style.css
+++ b/fakewallapp/war/resources/style.css
@@ -69,7 +69,7 @@
 	margin: 15px 15px 15px 15px;
 }
 
-.dp {
+.main-dp {
 	width: 50px;
 	height: 50px;
 	float: left;
@@ -128,16 +128,26 @@
 .remove-comment:active {
 	background-position: left -48px;
 }
-.beta{
-	position:fixed;
-	top:0px;
-	left:65%;
-	width:100px;
-	hieght:100px;
+
+.beta {
+	position: fixed;
+	top: 0px;
+	left: 65%;
+	width: 100px;
+	hieght: 100px;
+}
+
+#gaga {
+	color: #3B5998;
+	font-size: 1.1em;
+	font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
+	margin-left:10px;
+}
+
+.dp { /*added to select all dp images  */
 	
 }
-#gaga{
-	color:#3B5998;
-	font-size:1.1em;
-	font-family:'lucida grande', tahoma, verdana, arial, sans-serif;
+.button{
+	margin-top:15px;
+	margin-bottom:20px;
 }
