--- a/fakewallapp/war/resources/style.css
+++ b/fakewallapp/war/resources/style.css
@@ -215,3 +215,56 @@ a {
 a:hover {
 	color: #ffffff;
 }
+
+.checkbox,.radio {
+	width: 19px;
+	height: 20px;
+	padding: 0px;
+	background: url("ticks.jpg");
+	display: block;
+	clear: left;
+	float: left;
+}
+
+.checked {
+	background-position: 0px -50px;
+}
+
+.clicked {
+	background-position: 0px -25px;
+}
+
+.clicked.checked {
+	background-position: 0px -75px;
+}
+
+.overlay {
+	position: absolute;
+	top: 1px;
+	left: 1px;
+}
+
+#tag-friends {
+	width: 500;
+	height:auto;
+	overflow: visible;
+}
+
+#tag-friends img {
+	position: relative;
+	top: 0;
+	left: 0;
+}
+
+#tag-friends input[type='checkbox'] {
+	position: absolute;
+	left: 1px;
+}
+
+#tag-friends div {
+	position: relative;
+	left: 0;
+	top: 0;
+	display: inline;
+	width: 100px
+}
