Adding help pages for Saving/deleting fakewalls and uploaded images.

--- a/fakewallapp/war/resources/style.css
+++ b/fakewallapp/war/resources/style.css
@@ -405,3 +405,12 @@ canvas {
 .remove-uploaded-image-div-hover{
 	background-position-y: -0px;
 }
+.more-about-text{
+	font-size:10px;
+}
+.more-about-text a{
+	color:blue;
+}
+.more-about-text a:hover{
+	font-weight:bold;
+}
