--- a/fakewallapp/war/resources/style.css
+++ b/fakewallapp/war/resources/style.css
@@ -174,6 +174,10 @@
 	font-size: 1.1em;
 	font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
 	margin-left: 10px;
+	padding-left:30px;
+	background-image: url(loading.gif);
+	background-repeat: no-repeat;
+	background-position-y: 50%;
 }
 
 .dp { /*added to select all dp images  */
